--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,47 @@
+axial_positional_embedding==0.2.1
+contourpy==1.1.1
+cycler==0.12.1
+Cython==3.0.11
+Deprecated==1.2.14
 einops==0.4.0
+fastdtw==0.3.4
+fonttools==4.53.1
+future==1.0.0
+futures==3.0.5
+gensim==4.3.1
+importlib_metadata==8.2.0
+importlib_resources==6.4.0
+joblib==1.4.2
+kiwisolver==1.4.5
+llvmlite==0.41.1
+local-attention==1.4.4
 matplotlib==3.7.0
+mpmath==1.3.0
+networkx==3.1
+numba==0.58.1
 numpy==1.23.5
+packaging==24.1
 pandas==1.5.3
 patool==1.12
+patsy==0.5.6
+pillow==10.4.0
+product_key_memory==0.1.10
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
 reformer-pytorch==1.4.4
 scikit-learn==1.2.2
 scipy==1.10.1
+six==1.16.0
 sktime==0.16.1
+smart-open==6.3.0
+statsmodels==0.14.1
+swalign==0.3.7
 sympy==1.11.1
+threadpoolctl==3.5.0
 torch==1.7.1
 tqdm==4.64.1
-fastdtw==0.3.4
-futures==3.0.5
-gensim==4.3.1
-six==1.16.0
-smart-open==6.3.0
+typing_extensions==4.12.2
+urllib3==2.2.2
+wrapt==1.16.0
+zipp==3.19.2
